Add Header section, add to Home page

--- a/client/main/styles/index.css
+++ b/client/main/styles/index.css
@@ -19,3 +19,20 @@ section {
     justify-content: center;
     width: 100%;
 }
+
+.hvrGrow {
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
+
+.hvrGrow:hover,
+.hvrGrow:focus,
+.hvrGrow:active {
+    transform: scale(1.1);
+}
