--- a/client/main/styles/header.css
+++ b/client/main/styles/header.css
@@ -10,6 +10,11 @@ body {
     font-family: Garamond, sans-serif;
 }
 
+.header-wrapper {
+    height: 100px;
+    line-height: 100px;
+}
+
 .tab {
     display: inline-block;
     font-weight: bold;
