--- a/client/main/styles/index.css
+++ b/client/main/styles/index.css
@@ -37,4 +37,10 @@ section {
     transform: scale(1.1);
 }
 
-
+.section-wrapper {
+    top: 100px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+}
