Add images to About section and related styling

--- a/client/main/styles/about.css
+++ b/client/main/styles/about.css
@@ -1,3 +1,11 @@
+.about-image-small {
+    width: 20%;
+}
+
+.about-image-small-wrapper {
+    text-align: center;
+}
+
 .text-wrapper {
     display: block;
     overflow: hidden;
