--- a/client/main/styles/about.css
+++ b/client/main/styles/about.css
@@ -6,6 +6,19 @@
     text-align: center;
 }
 
+.about-title {
+    font-size: 26px;
+    margin: 10px 0 0 0;
+    padding: 0;
+}
+
+.about-title-description {
+    font-size: 18px;
+    font-style: italic;
+    margin: 0;
+    padding: 0;
+}
+
 .text-wrapper {
     display: block;
     overflow: hidden;
