--- a/client/main/styles/gallery.css
+++ b/client/main/styles/gallery.css
@@ -1,7 +1,8 @@
 .gallery {
     display: inline-block;
+    float: left;
     font-weight: bold;
-    margin: 0 20px;
+    margin: 0 1%;
 }
 
 .gallery a:hover {
@@ -12,6 +13,13 @@
     font-size: 22px;
     margin: 0;
     padding: 0;
+}
+
+.gallery-wrapper {
+    display: block;
+    overflow: hidden;
+    margin: 0 auto;
+    width: 80%;
 }
 
 .galleries {
