--- a/client/main/styles/gallery.css
+++ b/client/main/styles/gallery.css
@@ -1,8 +1,11 @@
 .gallery {
     display: inline-block;
-    float: left;
     font-weight: bold;
-    margin: 0 1%;
+    list-style-type: none;
+    margin: 0 0 15px 0;
+    min-width: 300px;
+    text-align: center;
+    width: 33%;
 }
 
 .gallery a:hover {
@@ -16,7 +19,6 @@
 }
 
 .gallery-wrapper {
-    display: block;
     overflow: hidden;
     margin: 0 auto;
     width: 80%;
@@ -26,6 +28,16 @@
     display: inline-block;
     margin: 0;
     padding: 0;
-    text-align: center;
-    width: 100%;
+}
+
+@media only screen and (max-width: 1150px) {
+    .gallery {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 775px) {
+    .gallery {
+        width: 100%;
+    }
 }
