--- a/client/main/styles/home.css
+++ b/client/main/styles/home.css
@@ -1,4 +1,6 @@
 .banner-image {
+    display: block;
+    margin: 0 auto;
     width: 80%;
 }
 
@@ -11,7 +13,7 @@
 }
 
 .small-image {
-    width: 33%;
+    width: 33.3%;
 }
 
 .text-overlay {
