--- a/client/main/styles/gallery.css
+++ b/client/main/styles/gallery.css
@@ -2,14 +2,19 @@
     display: inline-block;
     font-weight: bold;
     list-style-type: none;
-    margin: 0 0 15px 0;
+    margin: 0 .3%;
+    padding: 0;
     min-width: 300px;
     text-align: center;
-    width: 33%;
+    width: 32%;
 }
 
 .gallery a:hover {
     color: lightgray;
+}
+
+.gallery-image {
+    width: 98%;
 }
 
 .gallery-title {
@@ -21,7 +26,7 @@
 .gallery-wrapper {
     overflow: hidden;
     margin: 0 auto;
-    width: 80%;
+    width: 100%;
 }
 
 .galleries {
