--- a/client/main/styles/header.css
+++ b/client/main/styles/header.css
@@ -10,6 +10,15 @@ body {
     font-family: Garamond, sans-serif;
 }
 
+.dropdown-menu {
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    display: none;
+    min-width: 160px;
+    position: absolute;
+    z-index: 1;
+}
+
 .header-wrapper {
     height: 100px;
     line-height: 100px;
@@ -19,6 +28,15 @@ body {
     display: inline-block;
     font-weight: bold;
     margin: 0 20px;
+    position: relative;
+}
+
+.tab:hover .dropdown-menu {
+    display: block;
+}
+
+.tab a:hover {
+    color: lightgray;
 }
 
 .tabs {
@@ -29,6 +47,3 @@ body {
     width: 100%;
 }
 
-.tab a:hover {
-    color: lightgray;
-}
