--- a/client/main/styles/header.css
+++ b/client/main/styles/header.css
@@ -12,11 +12,19 @@ body {
 
 .dropdown-menu {
     background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     display: none;
-    min-width: 160px;
+    padding-left: 1%;
+    min-width: 200px;
     position: absolute;
+    text-align: left;
     z-index: 1;
+}
+
+.dropdown-menu a {
+    display: block;
+    height: 50px;
+    line-height: 50px;
+    padding-left: 3%;
 }
 
 .header-wrapper {
