--- a/client/main/styles/services.css
+++ b/client/main/styles/services.css
@@ -1,32 +1,50 @@
 .services-image {
     display: block;
     margin: 0 auto;
+    width: 100%;
+}
+
+.services-image-corporate {
+    background-image: url("../images/services-corporate-image.png");
+}
+
+.services-image-real-estate {
+    background-image: url("../images/services-real-estate-image.png");
+}
+
+.services-image-wedding {
+    background-image: url(../images/services-wedding-image.png);
+}
+
+.services-menu-item {
+    list-style-position: inside;
 }
 
 .services-subtitle {
     font-size: 24px;
-    margin: 10px 0 0 0;
+    margin-top: 10px;
+}
+
+.services-text {
+    margin: 0 auto;
     padding: 0;
+    text-align: center;
+    width: 80%;
 }
 
 .services-title {
     font-size: 26px;
-    margin: 10px 0 0 0;
-    padding: 0;
-    text-align: center;
+    margin-top: 10px;
 }
 
 .services-quote {
     font-size: 18px;
     font-style: italic;
-    margin: 0;
-    padding: 0;
-    text-align: center;
 }
 
 .services-wrapper {
     display: block;
     overflow: hidden;
     margin: 0 auto;
-    width: 80%;
+    width: 100%;
 }
