--- a/client/main/styles/header.css
+++ b/client/main/styles/header.css
@@ -10,6 +10,16 @@ body {
     font-family: Garamond, sans-serif;
 }
 
+header {
+    background-color: rgba(255, 255, 255, 0.5);
+    height: 100px;
+    left: 0;
+    line-height: 100px;
+    top: 0;
+    position: fixed;
+    width: 100%;
+}
+
 .dropdown-menu {
     background-color: #f9f9f9;
     display: none;
