--- a/client/main/styles/header.css
+++ b/client/main/styles/header.css
@@ -12,6 +12,7 @@ body {
 
 header {
     background-color: rgba(255, 255, 255, 0.5);
+    border-bottom: 1px solid #fff;
     height: 100px;
     left: 0;
     line-height: 100px;
