--- a/client/main/styles/footer.css
+++ b/client/main/styles/footer.css
@@ -1,6 +1,20 @@
 footer {
-    margin: 20px 0;
+    color: #3e6cab;
+    margin: 50px auto 20px auto;
     text-align: center;
+    width: 80%;
+}
+
+footer a {
+    color: #3e6cab;
+}
+
+.footer-divider {
+    background-color: #d3d3d3;
+    border-radius: 2px;
+    height: 2px;
+    margin-bottom: 50px;
+    width: 100%;
 }
 
 .footer-text {
@@ -19,5 +33,9 @@ footer {
     display: inline;
     margin: 0;
     padding: 0 3px;
+}
+
+.stroke {
+    stroke-linecap: round;
 }
 
