Add styling to make header responsive based on window size

--- a/client/main/styles/index.css
+++ b/client/main/styles/index.css
@@ -51,3 +51,12 @@ section {
         1px -1px 0 rgba(84,84,84,0.2),
         -1px 1px 0 rgba(84,84,84,0.2);
 }
+
+@media only screen and (max-width: 750px) {
+
+    section {
+        padding-top: 200px;
+    }
+}
+
+
