--- a/client/main/styles/header.css
+++ b/client/main/styles/header.css
@@ -22,6 +22,10 @@ header {
     z-index: 2;
 }
 
+.collapsed-menu {
+    display: none;
+}
+
 .dropdown-menu {
     background-color: #f9f9f9;
     display: none;
@@ -77,3 +81,28 @@ header {
     width: 100%;
 }
 
+
+@media only screen and (max-width: 750px) {
+    header {
+        height: 200px;
+        line-height: 200px;
+        position: absolute;
+    }
+
+    .collapsed-menu {
+        cursor: pointer;
+        display: block;
+        height: 100px;
+        line-height: 100px;
+        text-align: center;
+    }
+
+    .header-logo {
+        position: static;
+        text-align: center;
+    }
+
+    .tabs {
+        display: none;
+    }
+}
