--- a/client/main/styles/gallery.css
+++ b/client/main/styles/gallery.css
@@ -1,48 +1,33 @@
-.gallery {
-    display: inline-block;
-    font-weight: bold;
-    list-style-type: none;
-    margin: 0 .3%;
-    padding: 0;
-    min-width: 300px;
-    text-align: center;
+.column {
+    float: left;
     width: 32%;
+    padding: .5%;
 }
 
-.gallery a:hover {
-    color: lightgray;
-}
-
-.gallery-image {
-    width: 98%;
-}
-
-.gallery-title {
-    font-size: 22px;
-    margin: 0;
-    padding: 0;
-}
-
-.gallery-wrapper {
-    overflow: hidden;
-    margin: 0 auto;
+.column img {
+    margin-top: 12px;
     width: 100%;
 }
 
-.galleries {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
-@media only screen and (max-width: 1150px) {
-    .gallery {
-        width: 50%;
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media (max-width: 995px) {
+    .column {
+        padding: 1%;
+        width: 48%;
     }
 }
 
-@media only screen and (max-width: 775px) {
-    .gallery {
-        width: 100%;
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media (max-width: 600px) {
+    .column {
+        padding: 1%;
+        width: 98%;
     }
 }
