--- a/client/main/styles/footer.css
+++ b/client/main/styles/footer.css
@@ -39,3 +39,12 @@ footer a {
     stroke-linecap: round;
 }
 
+@media only screen and (max-width: 750px) {
+    .fa-2x {
+        font-size: 1.5em;
+    }
+
+    .footer-text {
+        font-size: 16px;
+    }
+}
