--- a/client/main/styles/galleries.css
+++ b/client/main/styles/galleries.css
@@ -38,12 +38,11 @@
 }
 
 .galleries-subtitle {
-    font-size: 24px;
+    font-size: 42px;
     margin: 0 auto;
     padding: 0;
-    text-align: left;
+    text-align: center;
     font-style: italic;
-    width: 80%;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
